--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,6 +17,15 @@ body {
     p {
         font-family: "Open Sans", Arial, sans-serif;
     }
+    .luis-miguel {
+        background-color: #7b7b14;
+        color: #fff;
+        padding: 30px;
+        border-radius: 12px;
+    }
+    p {
+        font-family: "Open Sans", Arial, sans-serif;
+    }
 }
 
 // Estilos para el contenedor de información de la serie
